fix: removed overflow from y axis in dispatch form

--- a/apps/dispatch/src/app/components/run/dispatch/dispatch.component.scss
+++ b/apps/dispatch/src/app/components/run/dispatch/dispatch.component.scss
@@ -7,7 +7,7 @@ button {
   padding-bottom: 1rem;
   padding-right: 1rem;
   background-color: white;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .card-form-section-title {
